reformated rootcontroller to easily add more fmxl, added button login skeletons, added fxml